--- a/Cafe_Desktop/Cafe_Desktop/App.xaml
+++ b/Cafe_Desktop/Cafe_Desktop/App.xaml
@@ -2,8 +2,36 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Cafe_Desktop"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/AuthorizationWindow.xaml">
     <Application.Resources>
-         
+        <SolidColorBrush x:Key="AdditionalBackground" Color="#ffed608b"/>
+        <SolidColorBrush x:Key="EntryBackground" Color="#60ed608b"/>
+
+        <FontFamily x:Key="MainFont">
+            Gabriola
+        </FontFamily>
+
+        <Style x:Key="{x:Static SystemParameters.FocusVisualStyleKey}">
+            <Setter
+                Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="{StaticResource MainFont}"/>
+            <Setter Property="FontSize" Value="24"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontFamily" Value="{StaticResource MainFont}"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Width" Value="180"/>
+            <Setter Property="Height" Value="24"/>
+            <Setter Property="Background" Value="{StaticResource EntryBackground}"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="IsInactiveSelectionHighlightEnabled" Value="False"/>
+        </Style>
     </Application.Resources>
 </Application>
