--- a/Cafe_Desktop/Cafe_Desktop/Views/AuthorizationWindow.xaml
+++ b/Cafe_Desktop/Cafe_Desktop/Views/AuthorizationWindow.xaml
@@ -3,13 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Cafe_Desktop.Views"
+        xmlns:vm="clr-namespace:Cafe_Desktop.ViewModels"
         mc:Ignorable="d"
         Title="Авторизация" 
         Height="480" 
         Width="750"
         MinHeight="450"
         MinWidth="550" Icon="/Resources/icon.ico">
+    <Window.DataContext>
+        <vm:AuthorizationVM/>
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -39,7 +42,8 @@
                         DockPanel.Dock="Left"/>
                     <TextBox
                         Margin="0, 0, 0, 0"
-                        DockPanel.Dock="Right">
+                        DockPanel.Dock="Right"
+                        Text="{Binding Username}">
                     </TextBox>
                 </DockPanel>
             </StackPanel>
@@ -50,20 +54,21 @@
                         Text="Пароль:"
                         Margin="0, 0, 30, 0"
                         DockPanel.Dock="Left"/>
-                    <TextBox
+                    <PasswordBox
                         Margin="0, 0, 0, 0"
-                        DockPanel.Dock="Right">
-                    </TextBox>
+                        DockPanel.Dock="Right"/>
                 </DockPanel>
             </StackPanel>
             <Button
                 Content="Войти"
+                Command="{Binding LoginCommand}"
                 Width="180"
                 Margin="90, 10, 0, 0"/>
         </StackPanel>
         <Button
             Style="{StaticResource ExitButtonStyle}"
             Content="Выход"
+            Command="{Binding ExitCommand}"
             Grid.Row="1"
             HorizontalAlignment="Center"
             VerticalAlignment="Bottom"
