--- a/Cafe_Desktop/Cafe_Desktop/Views/CookWindow.xaml
+++ b/Cafe_Desktop/Cafe_Desktop/Views/CookWindow.xaml
@@ -3,12 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Cafe_Desktop.Views"
+        xmlns:vm="clr-namespace:Cafe_Desktop.ViewModels"
         mc:Ignorable="d"
         Title="Окно повара" 
         Height="450" 
         Width="800" 
         Icon="/Resources/icon.ico">
+    <Window.DataContext>
+        <vm:CookVM/>
+    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -39,7 +42,8 @@
             Grid.Row="1"
             Grid.ColumnSpan="2"
             Margin="10, 0, 10, 10"
-            ItemsSource="{Binding Orders}">
+            ItemsSource="{Binding Orders}"
+            SelectedItem="{Binding SelectedOrder}">
         </ListView>
         <StackPanel
             Orientation="Vertical"
@@ -51,14 +55,14 @@
             <RadioButton
                 Content="готовится"
                 GroupName="Status"
-                IsChecked="{Binding SelectedOrder.IsCooking}"
-                IsEnabled="{Binding SelectedOrder.StatusChangingEnabled}"
+                IsChecked="{Binding SelectedOrderVM.IsCooking}"
+                IsEnabled="{Binding StatusChangingEnabled}"
                 Padding="5, -13, 0, 0"/>
             <RadioButton
                 Content="готов"
                 GroupName="Status"
-                IsChecked="{Binding SelectedOrder.IsCooked}"
-                IsEnabled="{Binding SelectedOrder.StatusChangingEnabled}"
+                IsChecked="{Binding SelectedOrderVM.IsCooked}"
+                IsEnabled="{Binding StatusChangingEnabled}"
                 Margin="0, 5, 0, 0"
                 Padding="5, -13, 0, 0"/>
         </StackPanel>
