--- a/Cafe_Desktop/Cafe_Desktop/App.xaml
+++ b/Cafe_Desktop/Cafe_Desktop/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Cafe_Desktop"
+             xmlns:converters="clr-namespace:Cafe_Desktop.Converters"
              StartupUri="Views/AuthorizationWindow.xaml">
     <Application.Resources>
         <SolidColorBrush x:Key="AdditionalBackground" Color="#ffed608b"/>
@@ -11,6 +12,8 @@
         <FontFamily x:Key="MainFont">
             Gabriola
         </FontFamily>
+
+        <converters:UpdateStatusConverter x:Key="UpdateStatusConverter"/>
 
         <Style TargetType="Image">
             <Setter Property="Stretch" Value="Uniform"/>
